# strela-sidecar

./: Cargo.toml  Dockerfile
src/: main.rs
